# ShallowWater

./: CMakeLists.txt  README.md
shaders/: ComputeShader.glsl  Distortion.glsl  fBoxMesh.glsl  fWaterShader.glsl  vBoxMesh.glsl  vWaterShader.glsl
src/: ShaderProgram.cpp  ShaderProgram.h  common.h  main.cpp  stb_image.h  utils.h
